# hs-busya

./: .gitignore  README.md  hsbot.cabal  settings.ini.example  stack.yaml
src/: Config.hs  Main.hs  UpdateProcessor.hs
src/Models/: Chat.hs  Message.hs  Update.hs  User.hs
