name:          hsbot
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          hsbot
    hs-source-dirs: ./src/
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:  
                UpdateProcessor, 
                Models.Update, 
                Models.User, 
                Models.Update,
                Models.Message,
                Models.Chat
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , aeson
                  , wai
                  , text
